jupyter notebook update

--- a/Model_builder.ipynb
+++ b/Model_builder.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "id": "4bb4639a",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Pneumonia Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3f880c2",
+   "metadata": {},
+   "source": [
+    "## Loading of the data and preprocessing"
+   ]
   },
   {
    "cell_type": "code",
@@ -181,6 +191,14 @@
     "\n",
     "train_dataset = training_preparation(train_dataset)\n",
     "validation_dataset = training_preparation(validation_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca816f4",
+   "metadata": {},
+   "source": [
+    "## Creation and training of the model"
    ]
   },
   {
@@ -411,6 +429,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc6a1776",
+   "metadata": {},
+   "source": [
+    "## Evaluation of the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 129,
    "id": "07193008",
@@ -513,7 +539,7 @@
     "            cbar=False, xticklabels=categories, \n",
     "            yticklabels=categories,fmt='g')\n",
     "plt.ylabel('True Label')\n",
-    "plt.xlabel('Predicated Label')\n",
+    "plt.xlabel('Predicted Label')\n",
     "plt.show()  "
    ]
   },
